--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit>=1.36
-supabase>=2.6.0
-pandas>=2.2
-bcrypt>=4.1
-tzdata>=2024.1
+supabase>=2.17
 websockets>=11
 httpx>=0.27
+pandas>=2.2
+numpy>=1.26
+bcrypt>=4.1
+tzdata>=2024.1
